# prompt_transformer

./: .env.example  README.md  alembic.ini  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 20260415_0001_initial_schema.py  20260504_0006_request_token_usage.py
app/: __init__.py  main.py  run_server.py
app/api/: routes.py
app/core/: config.py  logging.py  rules.py
app/db/: bootstrap.py  seed.py  session.py
app/models/: profile.py  request_log.py
app/rules/: llm_policies.yaml  summary_personas.yaml  task_rules.yaml
app/schemas/: transform.py
app/services/: conversation_scores.py  final_response_service.py  guide_me_generation.py  llm_policy.py  llm_types.py  profile_resolver.py  prompt_requirements.py  prompt_scoring.py  request_logger.py  structure_evaluator.py  task_inference.py  token_usage.py  transformer_engine.py
app/services/llm_adapters/: anthropic.py  openai.py
docs/: LLM_Definition_PLAN.md  api_contract.md  operations.md  prompt_transformer_block_diagram.md  prompt_transformer_build_spec_v2_retry.rtf  token_usage_implementation_spec.md
tests/: conftest.py  test_api.py  test_execution_api.py
